--- a/WestWindMaintenence/WestWindModels/WestWindModels.csproj
+++ b/WestWindMaintenence/WestWindModels/WestWindModels.csproj
@@ -47,7 +47,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Category.cs" />
+    <Compile Include="Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Region.cs" />
+    <Compile Include="Supplier.cs" />
+    <Compile Include="Territories.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
