--- a/WestWindMaintenence/WebApp/packages.config
+++ b/WestWindMaintenence/WebApp/packages.config
@@ -4,6 +4,7 @@
   <package id="AspNet.ScriptManager.bootstrap" version="3.3.7" targetFramework="net461" />
   <package id="AspNet.ScriptManager.jQuery" version="3.3.1" targetFramework="net461" />
   <package id="bootstrap" version="3.3.7" targetFramework="net461" />
+  <package id="Bootwrap.FreeCode" version="1.0.3" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="jQuery" version="3.3.1" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights" version="2.9.1" targetFramework="net461" />
