--- a/WestWindMaintenence/WestWindModels/WestWindModels.csproj
+++ b/WestWindMaintenence/WestWindModels/WestWindModels.csproj
@@ -48,6 +48,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Category.cs" />
+    <Compile Include="Customers.cs" />
+    <Compile Include="Employee.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Region.cs" />
