--- a/WestWindMaintenence/WestWindSystem/WestWindSystem.csproj
+++ b/WestWindMaintenence/WestWindSystem/WestWindSystem.csproj
@@ -47,6 +47,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BLL\CustomerController.cs" />
+    <Compile Include="BLL\OrderController.cs" />
     <Compile Include="BLL\SupplierController.cs" />
     <Compile Include="DAL\WestWindContext.cs" />
     <Compile Include="DataModels\Country.cs" />
