--- a/WestWindMaintenence/WestWindSystem/WestWindSystem.csproj
+++ b/WestWindMaintenence/WestWindSystem/WestWindSystem.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BLL\CustomerController.cs" />
+    <Compile Include="BLL\EmployeeController.cs" />
     <Compile Include="BLL\OrderController.cs" />
     <Compile Include="BLL\SupplierController.cs" />
     <Compile Include="DAL\WestWindContext.cs" />
