--- a/WestWindMaintenence/WebApp/WebApp.csproj
+++ b/WestWindMaintenence/WebApp/WebApp.csproj
@@ -144,7 +144,9 @@
   <ItemGroup>
     <Content Include="About.aspx" />
     <Content Include="Admin\AddEditOrder.aspx" />
+    <Content Include="Admin\AddEditProduct.aspx" />
     <Content Include="Admin\AddEditSupplier.aspx" />
+    <Content Include="Admin\SearchProductsByPrice.aspx" />
     <Content Include="Admin\ViewSuppliers.aspx" />
     <Content Include="Contact.aspx" />
     <Content Include="Content\bootstrap-theme.css" />
@@ -212,12 +214,26 @@
     <Compile Include="Admin\AddEditOrder.aspx.designer.cs">
       <DependentUpon>AddEditOrder.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Admin\AddEditProduct.aspx.cs">
+      <DependentUpon>AddEditProduct.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Admin\AddEditProduct.aspx.designer.cs">
+      <DependentUpon>AddEditProduct.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Admin\AddEditSupplier.aspx.cs">
       <DependentUpon>AddEditSupplier.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Admin\AddEditSupplier.aspx.designer.cs">
       <DependentUpon>AddEditSupplier.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Admin\SearchProductsByPrice.aspx.cs">
+      <DependentUpon>SearchProductsByPrice.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Admin\SearchProductsByPrice.aspx.designer.cs">
+      <DependentUpon>SearchProductsByPrice.aspx</DependentUpon>
     </Compile>
     <Compile Include="Admin\ViewSuppliers.aspx.cs">
       <DependentUpon>ViewSuppliers.aspx</DependentUpon>
